[gd_scene load_steps=12 format=3 uid="uid://qat4x6q0ehfq"]

[ext_resource type="Script" uid="uid://xwg1o8bp4u7t" path="res://src/environment/pedestal_button/pedestal_button.gd" id="1"]

[sub_resource type="StandardMaterial3D" id="11"]
albedo_color = Color(0.482353, 0.482353, 0.482353, 1)

[sub_resource type="CylinderMesh" id="1"]
material = SubResource("11")
top_radius = 0.25
bottom_radius = 0.1
height = 1.5

[sub_resource type="CylinderShape3D" id="3"]
height = 1.5
radius = 0.4

[sub_resource type="StandardMaterial3D" id="7"]
albedo_color = Color(0.733333, 0, 0, 1)

[sub_resource type="CylinderMesh" id="6"]
material = SubResource("7")
top_radius = 0.2
bottom_radius = 0.2
height = 0.2

[sub_resource type="BoxShape3D" id="5"]
size = Vector3(7.5, 2.2, 7.5)

[sub_resource type="Animation" id="10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.19972, 0)]
}

[sub_resource type="Animation" id="8"]
resource_name = "activate_button"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.19972, 0), Vector3(0, 1.05, 0)]
}

[sub_resource type="Animation" id="9"]
resource_name = "unactivate_button"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.05, 0), Vector3(0, 1.2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rqu76"]
_data = {
&"RESET": SubResource("10"),
&"activate_button": SubResource("8"),
&"unactivate_button": SubResource("9")
}

[node name="PedestalButton" type="Area3D"]
collision_layer = 2
script = ExtResource("1")
can_deactivate = true

[node name="Pedestal" type="AnimatableBody3D" parent="."]
collision_layer = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pedestal"]
mesh = SubResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pedestal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.102912, 0)
shape = SubResource("3")

[node name="Button" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19972, 0)
collision_layer = 2
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.356671, 0)
mesh = SubResource("6")

[node name="InteractableArea" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.35488, 0, 0, 0, 1, 0, 0.473902, 0)
shape = SubResource("5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rqu76")
}

[connection signal="body_entered" from="." to="." method="_on_PedestalButton_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PedestalButton_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
